# netcalc

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  ChangeLog.md  Dockerfile  LICENSE  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  ipcalc.awk  misc.c  netcalc.1  netcalc.c  netcalc.h  output.c  output.h  strlcpy.c  sub-func.c  sub-o.h  sub-output.c  sub.c  sub.h  testit.sh
.github/workflows/: build.yml  container.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  docs  rules  watch
doc/: Makefile.in  sipcalc.1
include/: Makefile.in  sub-o.h  sub.h
lib/: strlcat.c
src/: Makefile.am  Makefile.in  cprintf.c  interface.c  misc.c  netcalc.c  netcalc.h  output.c  output.h  sub-func.c  sub-output.c  sub.c
tests/: Makefile.am  command_params.bats  display_ipv4.bats  helper_ipv4.bash  validate_address_ipv4.bats  validate_address_ipv6.bats
