CLEANFILES      = *~ *.trs *.log
EXTRA_DIST      = command_params.bats					\
		  display_ipv4.bats helper_ipv4.bash			\
		  validate_address_ipv4.bats validate_address_ipv6.bats

TESTS           = command_params.bats
TESTS          += display_ipv4.bats
TESTS          += validate_address_ipv4.bats
TESTS          += validate_address_ipv6.bats
